# anticheatcs2

./: CMakeLists.txt  README.md  build.bat
config/: signatures.json
src/: filescanner.cpp  filescanner.h  mainwindow.cpp  mainwindow.h  memoryscanner.cpp  memoryscanner.h  processscanner.cpp  processscanner.h
ui/: mainwindow.ui
